[gd_scene load_steps=8 format=3 uid="uid://h7wp81gthcj"]

[ext_resource type="Script" uid="uid://2ple6ifrwyfv" path="res://Scripts/Combat/CombatMain.gd" id="1_acmpo"]
[ext_resource type="Shader" uid="uid://bbukkvfu4wht0" path="res://Shaders/EBBB.gdshader" id="2_lmls6"]
[ext_resource type="PackedScene" uid="uid://ccmnh3kp4sqx6" path="res://Scenes/Combat/enemy_chud.tscn" id="3_lv84k"]
[ext_resource type="PackedScene" uid="uid://dldg4rxtuca5x" path="res://Scenes/Combat/player_chud.tscn" id="4_052d5"]
[ext_resource type="Texture2D" uid="uid://dsy15aggor000" path="res://Textures/Selector.png" id="4_lmls6"]
[ext_resource type="PackedScene" uid="uid://cd8xwmmujj05j" path="res://Scenes/Combat/combat_menu.tscn" id="5_x8nmc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ocxwg"]
shader = ExtResource("2_lmls6")
shader_parameter/scroll_velocity = Vector2(0, 0)
shader_parameter/h_wave_amp = 0.0
shader_parameter/h_wave_speed = 0.0
shader_parameter/h_wave_width = 1.0
shader_parameter/v_wave_amp = 0.0
shader_parameter/v_wave_speed = 0.0
shader_parameter/v_wave_width = 1.0

[node name="CombatMain" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_acmpo")

[node name="EnemyTargetTimer" type="Timer" parent="."]
wait_time = 0.167
one_shot = true

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ocxwg")
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="Enemy" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 25.0
offset_right = 588.0
offset_bottom = 44.0
theme_override_constants/separation = 8
alignment = 1

[node name="0" parent="Enemy" instance=ExtResource("3_lv84k")]
layout_mode = 2

[node name="Selector" type="TextureRect" parent="Enemy/0"]
visible = false
layout_mode = 0
offset_left = -4.0
offset_top = 5.0
offset_right = 4.0
offset_bottom = 13.0
texture = ExtResource("4_lmls6")
flip_h = true

[node name="SelectorMirror" type="TextureRect" parent="Enemy/0/Selector"]
layout_mode = 0
offset_left = 128.0
offset_right = 136.0
offset_bottom = 8.0
texture = ExtResource("4_lmls6")

[node name="1" parent="Enemy" instance=ExtResource("3_lv84k")]
layout_mode = 2

[node name="2" parent="Enemy" instance=ExtResource("3_lv84k")]
layout_mode = 2

[node name="3" parent="Enemy" instance=ExtResource("3_lv84k")]
layout_mode = 2

[node name="Player" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 264.0
offset_right = 588.0
offset_bottom = 322.0
theme_override_constants/separation = 8
alignment = 1

[node name="0" parent="Player" instance=ExtResource("4_052d5")]
layout_mode = 2

[node name="1" parent="Player" instance=ExtResource("4_052d5")]
layout_mode = 2

[node name="2" parent="Player" instance=ExtResource("4_052d5")]
layout_mode = 2

[node name="3" parent="Player" instance=ExtResource("4_052d5")]
layout_mode = 2

[node name="CombatMenu" parent="." instance=ExtResource("5_x8nmc")]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = -57.0
offset_right = 128.0
offset_bottom = 1.0
